# yolo-gateway

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  yolo
gateway/: .dockerignore  Dockerfile  audit.py  auth.py  entrypoint.sh  main.py  policy.py  pyproject.toml
gateway/routes/: aws.py  git.py  gmail.py  slack.py
gateway/templates/: dashboard.html
projects/: example-project.yml
